--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "export NODE_OPTIONS='--max-old-space-size=8192' && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,6 +11,8 @@
   "dependencies": {
     "@clerk/nextjs": "^4.25.3",
     "@neondatabase/serverless": "^0.6.0",
+    "@pinecone-database/doc-splitter": "^0.0.1",
+    "@pinecone-database/pinecone": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^4.36.1",
     "aws-sdk": "^2.1472.0",
@@ -20,9 +22,14 @@
     "dotenv": "^16.3.1",
     "drizzle-kit": "^0.19.13",
     "drizzle-orm": "^0.28.6",
+    "langchain": "^0.0.163",
     "lucide-react": "^0.284.0",
+    "md5": "^2.3.0",
     "next": "13.5.4",
+    "openai-edge": "^1.2.2",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.11.3",
+    "pinecone-client": "^1.1.2",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
@@ -31,6 +38,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/md5": "^2.3.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
