--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@pinecone-database/pinecone": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^4.36.1",
+    "ai": "^2.2.14",
     "aws-sdk": "^2.1472.0",
     "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
@@ -36,9 +37,7 @@
     "react-hot-toast": "^2.4.1",
     "react-type-animation": "^3.1.0",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
+    "tailwindcss-animate": "^1.0.7",
     "@types/md5": "^2.3.3",
     "@types/node": "^20",
     "@types/react": "^18",
