--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "@pinecone-database/pinecone": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^4.36.1",
+    "@types/md5": "^2.3.3",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "ai": "^2.2.14",
+    "autoprefixer": "^10",
     "aws-sdk": "^2.1472.0",
     "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
@@ -23,6 +28,8 @@
     "dotenv": "^16.3.1",
     "drizzle-kit": "^0.19.13",
     "drizzle-orm": "^0.28.6",
+    "eslint": "^8",
+    "eslint-config-next": "13.5.4",
     "langchain": "^0.0.163",
     "lucide-react": "^0.284.0",
     "md5": "^2.3.0",
@@ -31,22 +38,16 @@
     "pdf-parse": "^1.1.1",
     "pg": "^8.11.3",
     "pinecone-client": "^1.1.2",
+    "postcss": "^8",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-type-animation": "^3.1.0",
+    "stripe": "^13.9.0",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7",
-    "@types/md5": "^2.3.3",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.4",
-    "postcss": "^8",
     "tailwindcss": "^3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   }
 }
