--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
     "tailwindcss": "^3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.3"
   }
 }
